--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   publish = "dist"
   command = "npm ci && npm run build"
   base = ""
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
@@ -61,6 +62,11 @@
 # Form handling for contact forms
 [[forms]]
   name = "contact"
+
+# Functions configuration
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
 
 # Build hooks for external triggers
 [build.ignore]
