--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "hcs-roofing-windows",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,7 +14,6 @@
     "deploy-check": "curl -s https://hcsroof.com | grep -q 'GTM-P9K8XB64' && echo 'GTM verified on live site'"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
