--- a/netlify.toml
+++ b/netlify.toml
@@ -1,29 +1,11 @@
 [build]
   publish = "dist"
   command = "npm ci && npm run build"
-  base = ""
   functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--production=false"
 
-# Build settings for reliability
-[build.processing]
-  skip_processing = false
-
-[build.processing.css]
-  bundle = true
-  minify = true
-
-[build.processing.js]
-  bundle = true
-  minify = true
-
-[build.processing.html]
-  pretty_urls = true
-
-# Redirect rules for blog posts and SPA routing
 [[redirects]]
   from = "/blog/*"
   to = "/index.html"
@@ -34,50 +16,13 @@
   to = "/index.html"
   status = 200
 
-# Headers for better SEO and performance
 [[headers]]
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
 
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.css"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-# Form handling for contact forms
-[[forms]]
-  name = "contact"
-
-# Functions configuration
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "esbuild"
-
-# Build hooks for external triggers
-[build.ignore]
-  command = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF -- . ':!README.md' ':!*.md' || exit 0"
-
-# Plugin configuration
-[[plugins]]
-  package = "@netlify/plugin-sitemap"
-
-# Environment variables (set these in Netlify dashboard)
-# EMAILJS_SERVICE_ID
-# EMAILJS_TEMPLATE_ID  
-# EMAILJS_PUBLIC_KEY
-# GTM_ID=GTM-P9K8XB64
+    Cache-Control = "public, max-age=31536000"
