--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "deploy-check": "curl -s https://hcsroof.com | grep -q 'GTM-P9K8XB64' && echo 'GTM verified on live site'"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@emailjs/browser": "^4.3.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
