--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@emailjs/browser": "^4.4.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -33,6 +34,9 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^7.0.6"
+  },
+  "overrides": {
+    "@eslint/plugin-kit": ">=0.3.4"
   }
 }
